fix missing b64 encoding

--- a/system/prometheus-server/templates/alertmanager-config.yaml
+++ b/system/prometheus-server/templates/alertmanager-config.yaml
@@ -8,10 +8,5 @@ metadata:
     prometheus: {{ include "prometheus.name" . }}
 
 data:
-  config.yaml: |
-    - static_configs:
-        scheme: https
-        timeout: 10s
-        - targets:
-{{ toYaml .Values.alertmanagers | indent 12}}
-{{- end -}}
+  config.yaml: {{ include "alertmanager.config" . | b64enc }}
+{{- end }}
