fix missing line break

--- a/system/prometheus-server/templates/prometheus-server.yaml
+++ b/system/prometheus-server/templates/prometheus-server.yaml
@@ -60,7 +60,7 @@ spec:
     key: config.yaml
   {{- end }}
 
-  {{- if .Values.ingress.host -}}
+  {{ if .Values.ingress.host -}}
   # The external URL of the Prometheus.
   externalUrl: https://{{ include "prometheus.externalURL" . }}
   {{- end }}
