[blackhole]: enable stickiness in nginx

--- a/global/blackhole/templates/ingress.yaml
+++ b/global/blackhole/templates/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: blackhole
   annotations:
+    nginx.ingress.kubernetes.io/load-balancer: "ip-hash"
     vice-president: "true"   
 
 spec:
