[blackhole]: use the right prefix for affinity

--- a/global/blackhole/templates/ingress.yaml
+++ b/global/blackhole/templates/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: blackhole
   annotations:
-    nginx.ingress.kubernetes.io/affinity: "cookie"
+    ingress.kubernetes.io/affinity: "cookie"
     vice-president: "true"   
 
 spec:
