--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -1,21 +1,25 @@
 dependencies:
   - name: prometheus-server
     alias: prometheus_server
-    repository: file://../../system/prometheus-server
-    version: 1.0.10
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.12
     condition: prometheus_server.enabled
+
   - name: cloudprober-exporter
     repository: file://vendor/cloudprober-exporter
     version: 1.0.0
     condition: cloudprober-exporter.enabled
+
   - name: netapp-exporter
     repository: file://vendor/netapp-exporter
     version: 0.0.1
     condition: netapp-exporter.enabled
+
   - name: apic_exporters
     repository: file://vendor/apic_exporters
     version: 1.0.0
     condition: apic_exporters.enabled
+
   - name: snmp-exporter
     alias: snmp_exporter
     repository: file://vendor/snmp-exporter
