--- a/openstack/blackbox/charts/blackbox-tests-regression/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-regression/templates/deployment.yaml
@@ -40,7 +40,7 @@ spec:
               cpu: 800m
               memory: 800M
             limits:
-              cpu: 1000m
+              cpu: 1
               memory: 1000M
 {{- if typeIs "float64" .Values.global.image.tag  }}{{/* https://github.com/kubernetes/helm/issues/1707 */}}
           image: {{.Values.global.image.repository}}:{{.Values.global.image.tag | printf "%0.f" }}
@@ -160,7 +160,7 @@ spec:
               cpu: 500m
               memory: 500M
             limits:
-              cpu: 800m
+              cpu: 1
               memory: 800M
 {{- if typeIs "float64" .Values.global.image.tag  }}{{/* https://github.com/kubernetes/helm/issues/1707 */}}
           image: {{.Values.global.image.repository}}:{{.Values.global.image.tag | printf "%0.f" }}
