Added vcenter-service-discovery to infra-monitoring

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -9,9 +9,9 @@ prometheus_server:
 
   retentionTime: 7d
 
-  additionalScrapeConfigs:
-    name: infra-prometheus-additional-scrape-config
-    key: scrape-config.yaml
+  #additionalScrapeConfigs:
+  #  name: infra-prometheus-additional-scrape-config
+  #  key: scrape-config.yaml
 
   ingress:
     enabled: true
@@ -61,3 +61,6 @@ apic_exporters:
 
 snmp_exporter:
   enabled: false
+
+vcenter-service-discovery:
+  enabled: true
