Re-enabled additionalScapeConfig stanza

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -9,9 +9,9 @@ prometheus_server:
 
   retentionTime: 7d
 
-  #additionalScrapeConfigs:
-  #  name: infra-prometheus-additional-scrape-config
-  #  key: scrape-config.yaml
+  additionalScrapeConfigs:
+    name: infra-prometheus-additional-scrape-config
+    key: scrape-config.yaml
 
   ingress:
     enabled: true
