--- a/openstack/blackbox/charts/blackbox-tests-datapath/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-datapath/templates/deployment.yaml
@@ -40,7 +40,7 @@ spec:
               cpu: 800m
               memory: 800M
             limits:
-              cpu: 1000m
+              cpu: 2
               memory: 1000M
 {{- if typeIs "float64" .Values.global.image.tag  }}{{/* https://github.com/kubernetes/helm/issues/1707 */}}
           image: {{.Values.global.image.repository}}:{{.Values.global.image.tag | printf "%0.f" }}
@@ -172,7 +172,7 @@ spec:
               memory: 500M
             limits:
               cpu: 800m
-              memory: 800M
+              memory: 1000M
           image: prom/statsd-exporter:v0.8.1
           imagePullPolicy: IfNotPresent
           args:
