Set cpu request quota integrity pods

--- a/openstack/blackbox/charts/blackbox-tests-integrity/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-integrity/templates/deployment.yaml
@@ -40,7 +40,7 @@ spec:
               cpu: 800m
               memory: 800M
             limits:
-              cpu: 1000m
+              cpu: 2
               memory: 1000M
 {{- if typeIs "float64" .Values.global.image.tag  }}{{/* https://github.com/kubernetes/helm/issues/1707 */}}
           image: {{.Values.global.image.repository}}:{{.Values.global.image.tag | printf "%0.f" }}
@@ -146,7 +146,7 @@ spec:
               cpu: 500m
               memory: 500M
             limits:
-              cpu: 800m
+              cpu: 2
               memory: 800M
           image: prom/statsd-exporter:v0.8.1
           imagePullPolicy: IfNotPresent
