inital not working snmp-exporter-sd config

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -8,6 +8,8 @@ prometheus_server:
   additionalScrapeConfigs:
     name: infra-prometheus-additional-scrape-config
     key: scrape-config.yaml
+  configMaps:
+    - snmp-exporter-targets
 
   ingress:
     enabled: true
@@ -56,4 +58,7 @@ apic_exporters:
   enabled: false
 
 snmp_exporter:
+  enabled: false
+
+snmp_exporter_sd:
   enabled: false
