--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -25,3 +25,9 @@ dependencies:
     repository: file://vendor/snmp-exporter
     version: 1.0.0
     condition: snmp_exporter.enabled
+
+  - name: snmp-exporter-sd
+    alias: snmp_exporter_sd
+    repository: file://vendor/snmp-exporter-sd
+    version: 1.0.0
+    condition: snmp_exporter_sd.enabled
