--- a/system/infra-monitoring/templates/scrape-config.yaml
+++ b/system/infra-monitoring/templates/scrape-config.yaml
@@ -8,5 +8,10 @@ metadata:
     prometheus: {{ .Values.prometheus_server.name }}
 
 data:
-  scrape-config.yaml: {{ include (print $.Template.BasePath "/_prometheus.yaml.tpl") . | b64enc }}
+    scrape-config.yaml:
+    {{ $root := . }}
+    {{ range $path, $bytes := .Files.Glob "scrape/*" }}
+    {{ print $path }}
+    {{ tpl ($root.Files.Get $path) . | b64enc }}
+    {{ end }}
 {{- end }}
