snmp-exporter-sd prometheus-infra not working

--- a/system/infra-monitoring/templates/scrape-config.yaml
+++ b/system/infra-monitoring/templates/scrape-config.yaml
@@ -10,8 +10,6 @@ metadata:
 data:
     scrape-config.yaml:
     {{ $root := . }}
-    {{ range $path, $bytes := .Files.Glob "scrape/*" }}
-    {{ print $path }}
-    {{ tpl ($root.Files.Get $path) . | b64enc }}
+    {{ range $path, $bytes := .Files.Glob "templates/*" }}
     {{ end }}
 {{- end }}
