--- a/openstack/openstack-prometheus/values.yaml
+++ b/openstack/openstack-prometheus/values.yaml
@@ -1,3 +1,10 @@
+global:
+  clusterType: controlplane
+
+  # Defined via secrets.
+  # region:
+  # domain:
+
 openstack-prometheus:
   name: openstack
 
@@ -22,3 +29,7 @@ openstack-prometheus:
   serviceDiscoveries:
     endpoints:
       enabled: false
+
+  alertmanagers:
+    - alertmanager.eu-de-1.cloud.sap
+    - alertmanager.eu-nl-1.cloud.sap
