Support enabling BGPVPN via config - requires image that supports the BGPVPN driver and its not ready for public consumption yet

--- a/openstack/neutron/templates/configmap-etc.yaml
+++ b/openstack/neutron/templates/configmap-etc.yaml
@@ -16,6 +16,10 @@ data:
 {{ include (print .Template.BasePath "/etc/_dnsmasq.conf.tpl") . | indent 4 }}
   l3-agent.ini: |
 {{ include (print .Template.BasePath "/etc/_l3-agent.ini.tpl") . | indent 4 }}
+{{- if .Values.bgp_vpn.enabled }}
+  networking-bgpvpn.conf: |
+{{ include (print .Template.BasePath "/etc/_networking_bgpvpn.conf.tpl") . | indent 4 }}
+{{- end}}
   metadata-agent.ini: |
 {{ include (print .Template.BasePath "/etc/_metadata-agent.ini.tpl") . | indent 4 }}
   ml2-conf.ini: |
