--- a/openstack/neutron/templates/deployment-server.yaml
+++ b/openstack/neutron/templates/deployment-server.yaml
@@ -143,6 +143,13 @@ spec:
               name: neutron-etc-vendor
               subPath: ml2-conf-asr1k.ini
               readOnly: true
+            {{- if .Values.bgp_vpn.enabled }}
+            - mountPath: /etc/neutron/networking-bgpvpn.conf
+              name: neutron-etc
+              subPath: networking-bgpvpn.conf
+              readOnly: true
+            {{- end}}
+
 {{- if .Values.audit.enabled }}
             - mountPath: /etc/neutron/neutron_audit_map.yaml
               name: neutron-etc
@@ -155,6 +162,11 @@ spec:
               subPath: watcher.yaml
               readOnly: true
 {{- end }}
+{{- if .Values.pod.debug.server }}
+            - mountPath: /development
+              name: development
+{{- end }}
+
 {{- else }}
             - mountPath: /neutron-etc
               name: neutron-etc
@@ -164,10 +176,11 @@ spec:
               name: neutron-etc-region
             - mountPath: /container.init
               name: container-init
-{{- end }}
 {{- if .Values.pod.debug.server }}
             - mountPath: /development
               name: development
+{{- end }}
+
 {{- end }}
         - name: statsd
           image: prom/statsd-exporter:v0.8.1
