--- a/openstack/prometheus-openstack/values.yaml
+++ b/openstack/prometheus-openstack/values.yaml
@@ -1,9 +1,9 @@
 global:
   clusterType: controlplane
+  domain: cloud.sap
 
   # Defined via secrets.
   # region:
-  # domain:
 
 openstack-prometheus:
   name: openstack
