no more forced dry run for the cell2 cleanups

--- a/openstack/nova/templates/nanny-deployment.yaml
+++ b/openstack/nova/templates/nanny-deployment.yaml
@@ -102,8 +102,7 @@ spec:
             - name: NOVA_DB_PURGE_ENABLED
               value: {{ .Values.db_purge.enabled | quote }}
             - name: NOVA_DB_PURGE_DRY_RUN
-              # value: {{ .Values.db_purge.dry_run | quote }}
-              value: "true"
+              value: {{ .Values.db_purge.dry_run | quote }}
             - name: NOVA_DB_PURGE_OLDER_THAN
               value: {{ .Values.db_purge.older_than | quote }}
             - name: NOVA_DB_PURGE_MAX_NUMBER
@@ -111,8 +110,7 @@ spec:
             - name: NOVA_CONSISTENCY_ENABLED
               value: {{ .Values.consistency.enabled | quote }}
             - name: NOVA_CONSISTENCY_DRY_RUN
-              # value: {{ .Values.consistency.dry_run | quote }}
-              value: "true"
+              value: {{ .Values.consistency.dry_run | quote }}
             - name: NOVA_CONSISTENCY_OLDER_THAN
               value: {{ .Values.consistency.older_than | quote }}
             - name: NOVA_CONSISTENCY_MAX_INSTANCE_FAULTS
