--- a/openstack/maia/requirements.yaml
+++ b/openstack/maia/requirements.yaml
@@ -2,6 +2,6 @@ dependencies:
   - name: prometheus-server
     alias: prometheus_server
     condition: prometheus_server.enabled
-    repository: file://../../system/prometheus-server
+    repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.12
 
