namespace=release.namespace

--- a/system/kube-system/charts/vice-president/templates/rolebinding.yaml
+++ b/system/kube-system/charts/vice-president/templates/rolebinding.yaml
@@ -12,5 +12,5 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ required ".Values.president.rbac.serviceAccountName" .Values.president.rbac.serviceAccountName }}
-    namespace: kube-system
+    namespace: {{ .Release.Namespace }}
 {{- end -}}
