--- a/system/kube-system/charts/vice-president/templates/clusterrolebinding.yaml
+++ b/system/kube-system/charts/vice-president/templates/clusterrolebinding.yaml
@@ -12,5 +12,5 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ .Values.president.rbac.serviceAccountName }}
-    namespace: kube-system
+    namespace: {{ .Release.Namespace }}
 {{- end }}
