--- a/system/kube-system/charts/vice-president/templates/deployment.yaml
+++ b/system/kube-system/charts/vice-president/templates/deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: {{ template "name" . }}
-  namespace: kube-system
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "name" . }}
 
