--- a/system/kube-system/charts/vice-president/templates/role.yaml
+++ b/system/kube-system/charts/vice-president/templates/role.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: {{ template "name" . }}
   name: {{ template "name" . }}
-  namespace: kube-system
+  namespace: {{ .Release.Namespace }}
 rules:
 - apiGroups:
   - ""
