[ironic] updates wham config file

--- a/openstack/ironic/charts/wham/templates/configmap.yaml
+++ b/openstack/ironic/charts/wham/templates/configmap.yaml
@@ -13,5 +13,8 @@ metadata:
 data:
   wham.yaml: |
     handlers:
-      - "baremetal"
+      baremetal:
+        regions:
+        - name: staging
+        - name: qa-de-1
 {{- end }}
