--- a/openstack/ironic/charts/wham/templates/configmap.yaml
+++ b/openstack/ironic/charts/wham/templates/configmap.yaml
@@ -14,7 +14,12 @@ data:
   wham.yaml: |
     handlers:
       baremetal:
-        regions:
-        - name: staging
-        - name: qa-de-1
+        staging:
+          user:  ipmi_exporter
+          password: "AHardPa55w0rd!"
+          auth_url: "https://identity-3.staging.cloud.sap/v3"
+        qa-de-1:
+          user:  ipmi_exporter
+          password: "YebmSoxtPemo3'"
+          auth_url: "https://identity-3.qa-de-1.cloud.sap/v3"
 {{- end }}
