[neutron] adapted sql metrics to queens globally

--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -199,7 +199,7 @@ pgmetrics:
             usage: "GAUGE"
             description: "lbaas Count"
     openstack_neutron_SAP_IP_status:
-      query: "SELECT floatingips.floating_network_id, networks.name AS network_name, floatingips.status, COUNT(*) AS gauge FROM floatingips INNER JOIN networks ON floatingips.tenant_id=networks.tenant_id WHERE floating_ip_address LIKE '10%' GROUP BY floatingips.floating_network_id, floatingips.status, networks.name"
+      query: "SELECT floatingips.floating_network_id, networks.name AS network_name, floatingips.status, COUNT(*) AS gauge FROM floatingips INNER JOIN networks ON floatingips.project_id=networks.project_id WHERE floating_ip_address LIKE '10%' GROUP BY floatingips.floating_network_id, floatingips.status, networks.name"
       metrics:
         - floating_network_id:
             usage: "LABEL"
@@ -214,7 +214,7 @@ pgmetrics:
             usage: "GAUGE"
             description: "Count of Floating IP by status"
     openstack_neutron_ext_IP_status:
-      query: "SELECT floatingips.floating_network_id, networks.name AS network_name, floatingips.status, COUNT(*) AS gauge FROM floatingips INNER JOIN networks ON floatingips.tenant_id=networks.tenant_id WHERE floating_ip_address LIKE '15%' GROUP BY floatingips.floating_network_id, floatingips.status, networks.name"
+      query: "SELECT floatingips.floating_network_id, networks.name AS network_name, floatingips.status, COUNT(*) AS gauge FROM floatingips INNER JOIN networks ON floatingips.project_id=networks.project_id WHERE floating_ip_address LIKE '15%' GROUP BY floatingips.floating_network_id, floatingips.status, networks.name"
       metrics:
         - floating_network_id:
             usage: "LABEL"
