fix prometheus-openstack resource.requests

--- a/openstack/prometheus-openstack/values.yaml
+++ b/openstack/prometheus-openstack/values.yaml
@@ -22,6 +22,11 @@ openstack-prometheus:
     enabled: true
     size: 300Gi
 
+  resources:
+    requests:
+      cpu: 10m
+      memory: 10Gi
+
   serviceAccount:
     create: false
     name: default
