silence neutron policy exclusions

--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -157,6 +157,9 @@ logging:
         neutron_lbaas:
             handlers: stdout, sentry
             level: WARNING
+        neutron.pecan_wsgi.hooks.policy_enforcement:
+            handlers: stdout, sentry
+            level: INFO
         suds:
             handlers: "null"
             level: ERROR
