Fixing the 1.9 TB flavor. And adding 1.4TB flavor
Memory needs to be dividable by 4 on vSphere.

--- a/openstack/sap-seeds/templates/flavor-seed.yaml
+++ b/openstack/sap-seeds/templates/flavor-seed.yaml
@@ -186,10 +186,19 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
+  - name: "m5.96xlarge"
+    id: "270"
+    vcpus: "128"
+    ram: "1468004"
+    disk: "64"
+    is_public: false
+    extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
   - name: "x1.32xlarge"
     id: "250"
     vcpus: "128"
-    ram: "1992278"
+    ram: "1992276"
     disk: "64"
     is_public: false
     extra_specs:
@@ -198,12 +207,9 @@ spec:
   - name: "x1e.16xlarge"
     id: "260"
     vcpus: "64"
-    ram: "1992278"
+    ram: "1992276"
     disk: "64"
     is_public: false
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
-
-
-      
