federate the new neutron nanny metric

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -135,6 +135,7 @@ data:
           - '{__name__=~"^metrics_.+"}'
           - '{__name__=~"^netapp_.+"}'
           - '{__name__=~"^neutron_asr1k.+"}'
+          - '{__name__=~"^neutron_nanny_.+"}'
           - '{__name__=~"^nginx_.+"}'
           - '{__name__=~"^node_.+"}'
           - '{__name__=~"^nova_nanny_.+"}'
