--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -126,6 +126,8 @@ securityContext:
 serviceDiscoveries:
   endpoints:
     enabled: true
+  pods:
+    enabled: false
 
 # The pod's tolerations.
 # See https://kubernetes.io/docs/concepts/configuration/taint-and-toleration
