--- a/system/infra-monitoring/templates/scrape-config.yaml
+++ b/system/infra-monitoring/templates/scrape-config.yaml
@@ -8,5 +8,5 @@ metadata:
     prometheus: {{ .Values.prometheus_server.name }}
 
 data:
-    scrape-config.yaml: {{ include (print "_prometheus.yaml.tpl") . | b64enc }}
+    scrape-config.yaml: {{ include (print $.Template.BasePath "/_prometheus.yaml.tpl") . | b64enc }}
 {{- end }}
