allow additional ingress annotations

--- a/system/prometheus-server/templates/ingress.yaml
+++ b/system/prometheus-server/templates/ingress.yaml
@@ -9,6 +9,9 @@ metadata:
   annotations:
     vice-president: {{ default true .Values.ingress.vice_president | quote }}
     disco: {{ default true .Values.ingress.disco | quote }}
+    {{- if .Values.ingress.annotations }}
+{{ toYaml .Values.ingress.annotations | indent 4 }}
+    {{ end }}
 
 spec:
   rules:
