--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -64,6 +64,9 @@ ingress:
   # Automate DNS management via disco.
   disco: true
 
+  # Additional annotations for ingress.
+  annotations: {}
+
 # Enable persistent storage.
 # If disabled, data will be stored in memory.
 persistence:
