rename k8s-secret in order to avoid helm upgrade fail

--- a/openstack/maia/templates/maia-ingress.yaml
+++ b/openstack/maia/templates/maia-ingress.yaml
@@ -12,7 +12,7 @@ metadata:
 
 spec:
   tls:
-     - secretName: maia
+     - secretName: maia-sconf
        hosts: [{{ required "maia.endpoint_host_public variable missing" .Values.maia.endpoint_host_public }}]
   rules:
     - host: {{.Values.maia.endpoint_host_public}}
