--- a/openstack/maia/templates/maia-secrets.yaml
+++ b/openstack/maia/templates/maia-secrets.yaml
@@ -3,14 +3,14 @@ kind: Secret
 type: Opaque
 
 metadata:
-  name: maia
+  name: maia-sconf
 
 data:
-{{- if .Values.maia.tls_crt }}
-  # the TLS cert will be provided by vice-president, we just need empty shells
-  tls.crt: {{ default "" .Values.maia.tls_crt | b64enc | quote }}
-  tls.key: {{ default "" .Values.maia.tls_key | b64enc | quote }}
-{{- end }}
 {{- if .Values.prometheus_server.enabled }}
   maia_scrape_config.yaml: {{ include "maia/templates/etc/_maia_scrape_config.yaml.tpl" . | b64enc | quote }}
+{{- end }}
+{{- if .Values.maia.tls_crt }}
+  # certs (unless provided by Vice-President operator)
+  tls.crt: {{ default "" .Values.maia.tls_crt | b64enc | quote }}
+  tls.key: {{ default "" .Values.maia.tls_key | b64enc | quote }}
 {{- end }}
