--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -50,7 +50,7 @@ prometheus_server:
   retentionTime: 30d
 
   additionalScrapeConfigs:
-    name: maia
+    name: maia-sconf
     key: maia_scrape_config.yaml
 
   ingress:
