operated prometheus k8s alerts, aggregations

--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -94,9 +94,10 @@ prometheus-frontend-operated:
     endpoints:
       enabled: false
 
-  alertmanagers:
-    - alertmanager.eu-de-1.cloud.sap
-    - alertmanager.eu-nl-1.cloud.sap
+  # Disable alerting until the transition to the operated Prometheus was done in all regions.
+  # alertmanagers:
+  #  - alertmanager.eu-de-1.cloud.sap
+  #  - alertmanager.eu-nl-1.cloud.sap
 
 prometheus-node-exporter:
   image:
