--- a/system/infra-monitoring/templates/scrape-config.yaml
+++ b/system/infra-monitoring/templates/scrape-config.yaml
@@ -8,5 +8,9 @@ metadata:
     prometheus: {{ .Values.prometheus_server.name }}
 
 data:
-    scrape-config.yaml: {{ include (print $.Template.BasePath "/_prometheus.yaml.tpl") . | b64enc }}
+    scrape-config.yaml:
+        {{ range $path, $bytes := .Files.Glob "_snmp-exporter-*.yaml" }}
+        {{ .Files.Get $path }}
+        {{ end }}
+# {{ include (print $.Template.BasePath "/_prometheus.yaml.tpl") . | b64enc }}
 {{- end }}
