--- a/system/infra-monitoring/templates/scrape-config.yaml
+++ b/system/infra-monitoring/templates/scrape-config.yaml
@@ -8,6 +8,6 @@ metadata:
     prometheus: {{ .Values.prometheus_server.name }}
 
 data:
-    scrape-config.yaml: {{ .Files.Glob "_snmp-exporter-*.yaml" | b64enc }}
+    scrape-config.yaml: {{ .Files.Glob "_snmp-exporter-*.yaml" }}
 # {{ include (print $.Template.BasePath "/_prometheus.yaml.tpl") . | b64enc }}
 {{- end }}
