--- a/system/infra-monitoring/templates/scrape-config.yaml
+++ b/system/infra-monitoring/templates/scrape-config.yaml
@@ -8,7 +8,7 @@ metadata:
     prometheus: {{ .Values.prometheus_server.name }}
 
 data:
-    scrape-config.yaml: {{ include (print "/charts/snmp-exporter/_snmp-exporter-n7k.yaml.tpl") . | b64enc }}
+    scrape-config.yaml: {{ include (print "../charts/snmp-exporter/_snmp-exporter-n7k.yaml.tpl") . | b64enc }}
 # {{ include (print $.Template.BasePath "/_prometheus.yaml.tpl") . | b64enc }}
 # {{ .Files.Glob "_snmp-exporter-*.yaml" }}
 {{- end }}
