Increase cleanup interval

--- a/global/concourse/templates/cleanup-cronjob.yaml
+++ b/global/concourse/templates/cleanup-cronjob.yaml
@@ -5,7 +5,7 @@ metadata:
   name: concourse-ci-cleanup
   namespace: {{ .Release.Namespace }}
 spec:
-  schedule: "50 * * * *"
+  schedule: "*/10 * * * *"
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 1
   jobTemplate:
