Don't reformat disk
One a node reboots (e.g. CoreOS upgrade) we used to loose the worker state leading to errors like:
volume 'fdf680d5-5e14-4db9-4fa3-b662df723bdd' disappeared from worker 's-eu-de-2-ci-services-4clcp'

--- a/global/concourse/templates/daemonset.yaml
+++ b/global/concourse/templates/daemonset.yaml
@@ -105,10 +105,12 @@ spec:
           VOLUME_ID=`openstack volume show ${VOLUME_NAME} -f value -c id`
           VOLUME_PATH=/root/dev/disk/by-id/wwn-0x${VOLUME_ID//-/}
           MOUNT_PATH=/root{{ $.Values.concourse.concourse.worker.workDir }}
-          if [ ! $(df -h | grep ${MOUNT_PATH}) ]; then
-            mkfs.btrfs -f ${VOLUME_PATH} &&
-            mkdir -p /root{{ $.Values.concourse.concourse.worker.workDir }} &&
-            mount -t btrfs ${VOLUME_PATH} ${MOUNT_PATH}
+          if ! blkid $VOLUME_PATH | grep -q btrfs ; then
+            mkfs.btrfs -f $VOLUME_PATH
+          fi
+          if ! df -h | grep $MOUNT_PATH ; then
+            mkdir -p $MOUNT_PATH
+            mount -t btrfs $VOLUME_PATH $MOUNT_PATH
           fi
         env:
         - name: NODE_NAME
