replace pid 1 with concourse worker process
This makes signal behavior more predictable

--- a/global/concourse/templates/daemonset.yaml
+++ b/global/concourse/templates/daemonset.yaml
@@ -136,10 +136,10 @@ spec:
         command:
         - /bin/sh
         args:
-        - -ce
+        - -ec
         - |-
-          update-ca-certificates &&
-          /usr/local/concourse/bin/concourse worker --name=${NODE_NAME}
+          update-ca-certificates
+          exec /usr/local/concourse/bin/concourse worker --name=${NODE_NAME}
         livenessProbe:
           failureThreshold: 5
           initialDelaySeconds: 10
