extend audit event mapping rules for new OS version

--- a/openstack/neutron/templates/etc/_neutron_audit_map.yaml
+++ b/openstack/neutron/templates/etc/_neutron_audit_map.yaml
@@ -20,6 +20,9 @@ resources:
             type_uri: network/bgpvpn/port-associations
   flavors:
   floatingips:
+    children:
+      tags:
+        singleton: true
   fw:
     # FWaaS 1.0 namespace
     singleton: true
@@ -78,10 +81,16 @@ resources:
       metering-label-rules:
         type_uri: network/metering/label-rules
   networks:
+    children:
+      tags:
+        singleton: true
   network-ip-availabilities:
   ports:
     custom_attributes:
       security_groups: network/security-groups
+    children:
+      tags:
+        singleton: true
   quotas:
     custom_actions:
       details: read/list/details
@@ -103,7 +112,17 @@ resources:
     custom_actions:
       add_router_interface: update/add/router-interface
       remove_router_interface: update/remove/router-interface
+    custom_attributes:
+      subnet_id: network/subnet
+      port_id: network/port
+      network_id: network/network
+    children:
+      tags:
+        singleton: true
   security-groups:
+    children:
+      tags:
+        singleton: true
   security-group-rules:
     # does not have a name field, so let's use the description
     custom_name: description
@@ -112,8 +131,17 @@ resources:
   segments:
   service-profiles:
   subnetpools:
+    children:
+      tags:
+        singleton: true
   subnets:
+    children:
+      tags:
+        singleton: true
   trunks:
+    children:
+      tags:
+        singleton: true
   vpn:
     # VPNaaS 2.0 namespace
     singleton: true
