--- a/system/infra-monitoring/templates/scrape-config.yaml
+++ b/system/infra-monitoring/templates/scrape-config.yaml
@@ -9,7 +9,7 @@ metadata:
 
 data:
     scrape-config.yaml: |-
-      {{ .Files.Get "charts/snmp-exporter/_snmp-exporter-arista.yaml" }}
-# {{ include (print $.Template.BasePath "/_prometheus.yaml.tpl") . | b64enc }}
+#      {{ .Files.Get "charts/snmp-exporter/_snmp-exporter-arista.yaml" }}
+      {{ include (print $.Template.BasePath "/_snmp-exporter-arista.yaml") . | b64enc }}
 # {{ .Files.Glob "_snmp-exporter-*.yaml" }}
 {{- end }}
