--- a/system/infra-monitoring/templates/scrape-config.yaml
+++ b/system/infra-monitoring/templates/scrape-config.yaml
@@ -8,7 +8,7 @@ metadata:
     prometheus: {{ .Values.prometheus_server.name }}
 
 data:
-    scrape-config.yaml: |-
+    scrape-config.yaml:
 #      {{ .Files.Get "charts/snmp-exporter/_snmp-exporter-arista.yaml" }}
       {{ include (print $.Template.BasePath "/_snmp-exporter-arista.yaml") . | b64enc }}
 # {{ .Files.Glob "_snmp-exporter-*.yaml" }}
