--- a/global/concourse/templates/daemonset.yaml
+++ b/global/concourse/templates/daemonset.yaml
@@ -214,6 +214,7 @@ spec:
           mountPath: /usr/local/share/ca-certificates
         - name: pre-stop
           mountPath: /land-worker
+      terminationGracePeriodSeconds: 1800
       volumes:
       - name: sap-root-certs
         secret:
