use prometheus-<tier> pattern

--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -53,7 +53,8 @@ prometheus-collector-operated:
     key: scrape-config.yaml
 
   ingress:
-    enabled: false
+    enabled: true
+    host: prometheus-collector-kubernetes
 
   # Store in memory.
   persistence:
@@ -79,7 +80,8 @@ prometheus-frontend-operated:
     key: scrape-config.yaml
 
   ingress:
-    enabled: false
+    enabled: true
+    host: prometheus-kubernetes
 
   # Store in memory.
   persistence:
