missed two and sort them in oid order

--- a/openstack/maia/files/snmp-exporter/asa-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/asa-generator.yaml
@@ -3,6 +3,14 @@ modules:
     walk:
       - cfwHardwareStatusValue
       - ifIndex
+      - ifDescr
+      - ifType
+      - ifMtu
+      - ifSpeed
+      - ifPhysAddress
+      - ifAdminStatus
+      - ifOperStatus
+      - ifLastChange
       - ifInOctets
       - ifInUcastPkts
       - ifInNUcastPkts
@@ -12,13 +20,6 @@ modules:
       - ifOutUcastPkts
       - ifOutNUcastPkts
       - ifOutDiscards
-      - ifDescr
       - ifOutErrors
       - ifOutQLen
-      - ifType
-      - ifMtu
-      - ifSpeed
-      - ifPhysAddress
-      - ifAdminStatus
-      - ifOperStatus
-      - ifLastChange
+      - ifSpecific
