prepair prometheus-infra to scrape snmp from controlplane

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -1,19 +1,19 @@
 prometheus_server:
   enabled: false
 
-  name: infra-prometheus
+  name: prometheus-infra
 
   retentionTime: 7d
 
   additionalScrapeConfigs:
-    name: infra-prometheus-additional-scrape-config
+    name: prometheus-infra-additional-scrape-config
     key: scrape-config.yaml
   configMaps:
     - snmp-exporter-targets
 
   ingress:
     enabled: true
-    host: infra-prometheus-scaleout
+    host: prometheus-infra-scaleout
 
   # Store on disk
   persistence:
