--- a/system/infra-monitoring/templates/additionl-scrape-config.yaml
+++ b/system/infra-monitoring/templates/additionl-scrape-config.yaml
@@ -8,8 +8,5 @@ metadata:
     prometheus: {{ .Values.prometheus_server.name }}
 
 data:
-    scrape-config.yaml:
-#      {{ .Files.Get "charts/snmp-exporter/_snmp-exporter-arista.yaml" }}
-      {{ include (print $.Template.BasePath "/_snmp-exporter-arista.yaml") . | b64enc }}
-# {{ .Files.Glob "_snmp-exporter-*.yaml" }}
+scrape-config.yaml: {{ include (print $.Template.BasePath "/_prometheus.yaml.tpl") . | b64enc }} 
 {{- end }}
