[wham] minor helm chart fix

--- a/global/wham/templates/deplyoment.yaml
+++ b/global/wham/templates/deplyoment.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: {{ include "wham.name" . }}
-        image: "{{ .Values.global.imageRegistry }}/{{ .Values.imageRepository }}:{{ .Values.imageTag }}"
+        image: "{{ .Values.imageRegistry }}/{{ .Values.imageRepository }}:{{ .Values.imageTag }}"
         args:
             - wham
             - --metric-port={{ .Values.metricPort }}
