enable operated kubernetes prometheus in all regions

--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -39,7 +39,7 @@ global:
 
   # Prometheus via operator.
   prometheus_operated:
-    enabled: false
+    enabled: true
 
 # Values for operated Prometheus collector.
 # Only used if global.prometheus_operated.enabled: true.
