allow setting complete hostname for prometheus-server

--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -58,6 +58,10 @@ ingress:
   # If the ingress is enabled, it's also used for the ingress host.
   host:
 
+  # Per default the host name is generated following the pattern `<host>.<region>.<domain>.
+  # However the full host name can be set explicitly via the hostNameOverride parameter.
+  # hostNameOverride: something.subDomain.tld
+
   # Automate certificate management via vice-president.
   vice_president: true
 
