set explicit hostname for global proms

--- a/global/prometheus-kubernetes/values.yaml
+++ b/global/prometheus-kubernetes/values.yaml
@@ -14,8 +14,7 @@ prometheus-kubernetes-global:
 
   ingress:
     enabled: true
-    # Will be `prometheus-kubernetes.global.cloud.sap
-    host: prometheus-kubernetes
+    hostNameOverride: prometheus-kubernetes.global.cloud.sap
     annotations:
       disco/zone-name: "global.cloud.sap."
 
