--- a/global/prometheus-openstack/values.yaml
+++ b/global/prometheus-openstack/values.yaml
@@ -14,8 +14,7 @@ prometheus-openstack-global:
 
   ingress:
     enabled: true
-    # Will be `prometheus-openstack.global.cloud.sap
-    host: prometheus-openstack
+    hostNameOverride: prometheus-openstack.global.cloud.sap
     annotations:
       disco/zone-name: "global.cloud.sap."
 
