[Glance] enabling resource limits

--- a/openstack/glance/values.yaml
+++ b/openstack/glance/values.yaml
@@ -46,24 +46,24 @@ upgrades:
 api:
   debug: false
   resources:
-    enabled: false
+    enabled: true
     limits:
-      memory: 128Mi
+      memory: 1Gi
       cpu: 500m
     requests:
-      memory: 128Mi
-      cpu: 500m
+      memory: 1Gi
+      cpu: 300m
 
 registry:
   debug: false
   resources:
-    enabled: false
+    enabled: true
     limits:
-      memory: 128Mi
-      cpu: 500m
+      memory: 1Gi
+      cpu: 200m
     requests:
-      memory: 128Mi
-      cpu: 500m
+      memory: 500Mi
+      cpu: 100m
 
 services:
   type: ClusterIP
