--- a/openstack/barbican/templates/api-deployment.yaml
+++ b/openstack/barbican/templates/api-deployment.yaml
@@ -99,8 +99,8 @@ spec:
             {{- end }}
           resources:
             requests:
-              memory: 24Mi
-              cpu: 10m
+              memory: 1Gi
+              cpu: 300m
         - name: statsd
           image:  "{{.Values.statsd.image.repository}}:{{.Values.statsd.image.tag}}"
           imagePullPolicy: IfNotPresent
