add alert manager urls for prometheus-infra

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -11,6 +11,10 @@ prometheus_server:
   configMaps:
     - snmp-exporter-targets
 
+  alertmanagers:
+    - alertmanager.eu-de-1.cloud.sap
+    - alertmanager.eu-nl-1.cloud.sap
+
   ingress:
     enabled: true
     host: prometheus-infra-scaleout
