configurable global scrapeInterval

--- a/system/prometheus-server/templates/prometheus-server.yaml
+++ b/system/prometheus-server/templates/prometheus-server.yaml
@@ -47,6 +47,11 @@ spec:
 {{ toYaml .Values.additionalScrapeConfigs | indent 4}}
   {{- end }}
 
+  {{ if .Values.scrapeInterval }}
+  # Interval between consecutive scrapes.
+  scrapeInterval: {{ .Values.scrapeInterval }}
+  {{ end }}
+
   {{ if .Values.configMaps }}
   # Mount additional configmaps from the same namespace.
   configMaps:
