--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -39,6 +39,9 @@ additionalScrapeConfigs:
   # Setting `optional: false` causes an error when the secret does not exist.
   # optional: true
 
+# Interval between consecutive scrapes.
+scrapeInterval: "60s"
+
 # List of configmaps in the same namespace as the Prometheus that should be mounted to /etc/prometheus/configmaps/<configmap-name>.
 # Can be used to add targets found by a custom service discovery.
 configMaps: []
