set scrape interval for prometheus-infra

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -4,6 +4,7 @@ prometheus_server:
   name: prometheus-infra
 
   retentionTime: 7d
+  scrapeInterval: "60s"
 
   additionalScrapeConfigs:
     name: prometheus-infra-additional-scrape-config
