--- a/system/kube-monitoring/charts/prometheus-rules/values.yaml
+++ b/system/kube-monitoring/charts/prometheus-rules/values.yaml
@@ -1,3 +1,7 @@
 # Name of the Prometheus to which the rules should be assigned to.
-prometheusFrontendName: k8s-frontend
-prometheusCollectorName: k8s-collector
+prometheusName:
+
+# Optional name of the Prometheus collector instance.
+# Only required if the collector -> frontend pattern is used.
+# If not given collector aggregation rules are not deployed.
+# prometheusCollectorName:
