--- a/system/kube-monitoring/charts/prometheus-rules/templates/frontend-aggregations.yaml
+++ b/system/kube-monitoring/charts/prometheus-rules/templates/frontend-aggregations.yaml
@@ -8,9 +8,9 @@ metadata:
   name: kubernetes-{{ printf "%s" $path | replace "/" "-" }}
   labels:
     tier: k8s
-    prometheus: {{ required "$values.prometheusFrontendName missing" $values.prometheusFrontendName }}
+    prometheus: {{ required "$values.prometheusName missing" $values.prometheusName }}
 
-spec:
+spec:..
 {{ printf "%s" $bytes | indent 2 }}
 
 {{- end }}
