--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -44,7 +44,7 @@ global:
 # Values for operated Prometheus collector.
 # Only used if global.prometheus_operated.enabled: true.
 prometheus-collector-operated:
-  name: k8s-collector
+  name: collector-kubernetes
 
   retentionTime: 1h
 
@@ -71,7 +71,7 @@ prometheus-collector-operated:
 # Values for operated Prometheus frontend.
 # Only used if global.prometheus_operated.enabled: true.
 prometheus-frontend-operated:
-  name: k8s-frontend
+  name: kubernetes
 
   retentionTime: 7d
 
@@ -100,6 +100,11 @@ prometheus-frontend-operated:
   # alertmanagers:
   #  - alertmanager.eu-de-1.cloud.sap
   #  - alertmanager.eu-nl-1.cloud.sap
+
+# Deploy basic set of Prometheus alert and aggregation rules for monitoring Kubernetes.
+prometheus-rules:
+  prometheusName: kubernetes
+  prometheusCollectorName: collector-kubernetes
 
 prometheus-node-exporter:
   image:
