--- a/system/kube-monitoring/charts/prometheus-rules/templates/frontend-aggregations.yaml
+++ b/system/kube-monitoring/charts/prometheus-rules/templates/frontend-aggregations.yaml
@@ -10,7 +10,7 @@ metadata:
     tier: k8s
     prometheus: {{ required "$values.prometheusName missing" $values.prometheusName }}
 
-spec:..
+spec:
 {{ printf "%s" $bytes | indent 2 }}
 
 {{- end }}
