--- a/system/kube-system/charts/vice-president/templates/alerts.yaml
+++ b/system/kube-system/charts/vice-president/templates/alerts.yaml
@@ -5,7 +5,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 
 metadata:
-  name: {{ template "name" . }}-{{ printf "%s" $path | replace "/" "-" }}
+  name: {{ printf "%s" $path | replace "/" "-" }}
   labels:
     tier: k8s
     type: alerting-rules
