--- a/system/kube-system/charts/vice-president/values.yaml
+++ b/system/kube-system/charts/vice-president/values.yaml
@@ -81,3 +81,9 @@ president:
   rbac:
     create: false
     serviceAccountName: default
+
+# Deploy vice presidential Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: kubernetes
