--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -156,14 +156,14 @@ data:
           region: ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-3
 
       - receiver: slack_metal_critical
-        continue: false
+        continue: true
         match_re:
           tier: metal
           severity: critical
           region: ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-3
 
       - receiver: slack_metal_warning
-        continue: false
+        continue: true
         match_re:
           tier: metal
           severity: warning
@@ -251,7 +251,7 @@ data:
 
       # ---- webhook handler: metal ----
       - receiver: wham_metal
-        continue: false
+        continue: true
         match_re:
           tier: metal
           severity: critical|warning|info
