--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -251,7 +251,7 @@ data:
 
       # ---- webhook handler: metal ----
       - receiver: wham_metal
-        continue: true
+        continue: false
         match_re:
           tier: metal
           severity: critical|warning|info
