independent limes alerts

--- a/openstack/limes/templates/api-service.yaml
+++ b/openstack/limes/templates/api-service.yaml
@@ -10,6 +10,8 @@ metadata:
     # uncomment to have Maia scape as well: maia.io/scrape: "true"
     prometheus.io/scrape: "true"
     prometheus.io/port: "80"
+    # The `openstack` Prometheus shall scrape metrics of OpenStack services.
+    prometheus.io/targets: "openstack"
 
 spec:
   selector:
