--- a/openstack/limes/values.yaml
+++ b/openstack/limes/values.yaml
@@ -39,3 +39,9 @@ limes:
   # Whether to apply resource requests/limits to containers.
   resources:
     enabled: false
+
+# Deploy limes Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
