--- a/system/kube-monitoring/templates/frontend-scrape-config.yaml
+++ b/system/kube-monitoring/templates/frontend-scrape-config.yaml
@@ -5,7 +5,7 @@ kind: Secret
 metadata:
   name: k8s-frontend-additional-scrape-config
   labels:
-    prometheus: k8s-frontend
+    prometheus: kubernetes
 
 data:
   scrape-config.yaml: {{ include (print $.Template.BasePath  "/_frontend-prometheus.yaml.tpl") . | b64enc }}
