--- a/system/kube-monitoring/charts/prometheus-rules/templates/alerts.yaml
+++ b/system/kube-monitoring/charts/prometheus-rules/templates/alerts.yaml
@@ -9,7 +9,7 @@ metadata:
   labels:
     tier: k8s
     type: alerting-rules
-    prometheus: {{ required "$values.prometheusName missing" $values.prometheusName }}
+    prometheus: {{ required ".Values.prometheusName missing" $values.prometheusName }}
 
 spec:
 {{ printf "%s" $bytes | indent 2 }}
