--- a/system/kube-monitoring/charts/prometheus-rules/templates/frontend-aggregations.yaml
+++ b/system/kube-monitoring/charts/prometheus-rules/templates/frontend-aggregations.yaml
@@ -8,7 +8,7 @@ metadata:
   name: kubernetes-{{ printf "%s" $path | replace "/" "-" }}
   labels:
     tier: k8s
-    prometheus: {{ required "$values.prometheusName missing" $values.prometheusName }}
+    prometheus: {{ required ".Values.prometheusName missing" $values.prometheusName }}
 
 spec:
 {{ printf "%s" $bytes | indent 2 }}
