--- a/system/kube-monitoring/templates/collector-scrape-config.yaml
+++ b/system/kube-monitoring/templates/collector-scrape-config.yaml
@@ -5,7 +5,7 @@ kind: Secret
 metadata:
   name: k8s-collector-additional-scrape-config
   labels:
-    prometheus: k8s-collector
+    prometheus: collector-kubernetes
 
 data:
   scrape-config.yaml: {{ include (print $.Template.BasePath  "/_collector-prometheus.yaml.tpl") . | b64enc }}
