--- a/system/kube-system/charts/vice-president/templates/alerts.yaml
+++ b/system/kube-system/charts/vice-president/templates/alerts.yaml
@@ -8,6 +8,7 @@ kind: PrometheusRule
 metadata:
   name: {{ printf "%s" $path | replace "/" "-" }}
   labels:
+    app: vice-president
     tier: k8s
     type: alerting-rules
     prometheus: {{ required ".Values.alerts.prometheus missing" $values.alerts.prometheus }}
