enable RBAC for prometheus-infra

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -28,7 +28,9 @@ prometheus_server:
     size: 100Gi
 
   rbac:
-    create: false
+    create: true
+  serviceAccount:
+    name: prometheus-infra
 
   serviceAccount:
     create: false
