--- a/openstack/prometheus-openstack/values.yaml
+++ b/openstack/prometheus-openstack/values.yaml
@@ -35,6 +35,6 @@ openstack-prometheus:
     endpoints:
       enabled: false
 
-  alertmanagers:
-    - alertmanager.eu-de-1.cloud.sap
-    - alertmanager.eu-nl-1.cloud.sap
+  # alertmanagers:
+  #  - alertmanager.eu-de-1.cloud.sap
+  #  - alertmanager.eu-nl-1.cloud.sap
