--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -88,6 +88,9 @@ persistence:
   # Size of the PVC.
   size: 100Gi
 
+  # Label selector to be be applied to the PVC.
+  selector: {}
+
 # Create RBAC resources.
 rbac:
   create: false
