--- a/system/kube-monitoring/charts/prometheus-frontend/templates/pvc.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/pvc.yaml
@@ -12,7 +12,7 @@ spec:
   resources:
     requests:
       storage: {{ required ".Values.persistence.size missing" .Values.persistence.size | quote }}
-  {{ if not (eq .Values.global.region "eu-de-2" "ap-ae-1" "ap-jp-1" "ap-jp-2" "ap-sa-1" "eu-de-1" "la-br-1" "na-us-1" "na-us-3") }}
+  {{ if not (eq .Values.global.region "eu-de-2" "ap-ae-1" "ap-jp-1" "ap-jp-2" "ap-sa-1" "eu-de-1" "la-br-1" "na-us-1" "na-us-3" "staging" ) }}
   selector:
     matchLabels:
       failure-domain.beta.kubernetes.io/zone: {{ required ".Values.global.region missing" .Values.global.region }}b
