--- a/openstack/limes/templates/api-service.yaml
+++ b/openstack/limes/templates/api-service.yaml
@@ -11,7 +11,7 @@ metadata:
     prometheus.io/scrape: "true"
     prometheus.io/port: "80"
     # The `openstack` Prometheus shall scrape metrics of OpenStack services.
-    prometheus.io/targets: "openstack"
+    prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
 
 spec:
   selector:
