--- a/openstack/maia/templates/etc/_maia.conf
+++ b/openstack/maia/templates/etc/_maia.conf
@@ -1,6 +1,10 @@
 {{- if .Values.maia.enabled }}
 [maia]
+{{- if .Values.prometheus.enabled }}
 prometheus_url = "http://prometheus-maia:{{.Values.prometheus.listen_port}}"
+{{- else -}}
+prometheus_url = "http://prometheus-operated:9090"
+{{- end }}
 bind_address = "0.0.0.0:{{.Values.maia.listen_port}}"
 #proxy = "http://localhost:8889"
 # do not list label values from series older than label_value_ttl
