fix service name

--- a/system/prometheus-server/templates/ingress.yaml
+++ b/system/prometheus-server/templates/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 
 metadata:
-  name: {{ include "prometheus.name" . }}
+  name: {{ include "prometheus.fullName" . }}
   labels:
     prometheus: {{ include "prometheus.name" . }}
   annotations:
@@ -20,7 +20,7 @@ spec:
         paths:
         - path: /
           backend:
-            serviceName: {{ include "prometheus.name" . }}
+            serviceName: {{ include "prometheus.fullName" . }}
             servicePort: 9090
   tls:
     - secretName: tls-{{ include "prometheus.externalURL" . | replace "." "-" }}
