--- a/system/prometheus-server/templates/service.yaml
+++ b/system/prometheus-server/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 
 metadata:
-  name: {{ include "prometheus.name" . }}
+  name: {{ include "prometheus.fullName" . }}
   labels:
     prometheus: {{ include "prometheus.name" . }}
 
