fix values in loop

--- a/openstack/limes/templates/api-service.yaml
+++ b/openstack/limes/templates/api-service.yaml
@@ -1,3 +1,4 @@
+{{ $values := .Values }}
 {{ range $cluster_id, $config := .Values.limes.clusters }}
 kind: Service
 apiVersion: v1
@@ -11,7 +12,7 @@ metadata:
     prometheus.io/scrape: "true"
     prometheus.io/port: "80"
     # The `openstack` Prometheus shall scrape metrics of OpenStack services.
-    prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
+    prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" $values.alerts.prometheus | quote }}
 
 spec:
   selector:
