--- a/openstack/domain-seeds/templates/domain-ccadmin-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-ccadmin-seed.yaml
@@ -40,9 +40,9 @@ spec:
         role: admin
       - group: CCADMIN_CLOUD_ADMINS
         role: member
-      - group: CCADMIN_BAREMETALMONITORING_ADMIN
+      - group: CCADMIN_BAME_ADMIN
         role: admin
-      - group: CCADMIN_BAREMETALMONITORING_ADMIN
+      - group: CCADMIN_BAME_ADMIN
         role: member
     - name: support
       description: 'Support Teams'
