Re-add dumb-init to worker container
Otherwise we collect zombies until the system is out of resources.

--- a/global/concourse/templates/daemonset.yaml
+++ b/global/concourse/templates/daemonset.yaml
@@ -134,8 +134,9 @@ spec:
         image: "{{ $.Values.concourse.image }}:{{ $.Values.concourse.imageTag }}"
         imagePullPolicy: {{ $.Values.concourse.imagePullPolicy | quote }}
         command:
-        - /bin/sh
+        - dumb-init
         args:
+        - /bin/sh
         - -ec
         - |-
           update-ca-certificates
